--- a/deployment/ingress/production.yaml
+++ b/deployment/ingress/production.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: simple-api
   namespace: production
-  # annotations:
-    # kubernetes.io/ingress.class: "nginx"
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   - host: api.simpleapp.pro 
