--- a/deployment/ingress/staging.yaml
+++ b/deployment/ingress/staging.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: simple-api
   namespace: staging
-  # annotations:
-    # kubernetes.io/ingress.class: "nginx"
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   - host: api-staging.simpleapp.pro
