--- a/deployment/ingress/staging.yaml
+++ b/deployment/ingress/staging.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-  - host: api-staging.simpleapp.pro
+  - host: simple-api.chronosng.com
     http:
       paths:
       - path: /
